@@ -2,8 +2,11 @@
 
 #ifdef OPENSSL_DOING_MAKEDEPEND
 
-/* Include any symbols here which have to be explicitly set to enable a
- * feature. For example OPENSSL_EXPERIMENTAL_FOO
+/* Include any symbols here that have to be explicitly set to enable a feature
+ * that should be visible to makedepend.
+ *
+ * [Our "make depend" doesn't actually look at this, we use actual build settings
+ * instead; we want to make it easy to remove subdirectories with disabled algorithms.]
  */
 
 #ifndef OPENSSL_FIPS
